# aoc

./: .gitignore  day1.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day17.hs  day18.hs  day19.hs  day2.hs  day20-alt3.txt  day20.hs  day21.hs  day22.hs  day24.hs  day3.hs  day6.hs  day7.hs  day9.hs  shell.nix
2017/1/: day1.hs
2017/2/: day2.hs
2017/4/: day4.hs
2017/5/: day5.hs
2020/: day1.hs  day10.hs  day16.hs  day18.hs  day23.hs  day24.hs  day25.hs  day3.hs  day4.hs  day5.hs  day8.hs
2021/: day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18-alt.txt  day18.hs  day19.hs  day2.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
2022/: day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
2024/: Cargo.toml
2024/input/day-02/: example.txt
2024/input/day-06/: example-2.txt
2024/src/: lib.rs
2025/: Cargo.toml
2025/input/day-01/: example.txt
2025/src/: lib.rs
