[package]
name = "aoc-2024"
version = "0.0.1"
autobins = false
edition = "2021"

[lib]
name = "aoc_2024"
path = "src/lib.rs"

[[bin]]
name = "day-01"

[[bin]]
name = "day-02"

[[bin]]
name = "day-03"

[[bin]]
name = "day-04"

[[bin]]
name = "day-05"

[[bin]]
name = "day-06"

[dependencies]
nom.version = "~7.1"
strum = { version = "~0.26", features = ["derive"] }
