[package]
name = "aoc-2024"
version = "0.0.1"
autobins = false
edition = "2021"

[lib]
name = "aoc_2024"
path = "src/lib.rs"

[[bin]]
name = "day-01"

[[bin]]
name = "day-02"

[[bin]]
name = "day-03"

[[bin]]
name = "day-04"

[[bin]]
name = "day-05"

[[bin]]
name = "day-06"

[[bin]]
name = "day-07"

[[bin]]
name = "day-08"

[[bin]]
name = "day-09"

[[bin]]
name = "day-10"

[[bin]]
name = "day-11"

[[bin]]
name = "day-13"

[[bin]]
name = "day-14"

[[bin]]
name = "day-16"

[[bin]]
name = "day-17"

[[bin]]
name = "day-18"

[[bin]]
name = "day-19"

[[bin]]
name = "day-22"

[[bin]]
name = "day-23"

[[bin]]
name = "day-24"

[dependencies]
nom.version = "~7.1"
strum = { version = "~0.26", features = ["derive"] }
