[package]
name = "aoc-2025"
version = "0.0.1"
autobins = false
edition = "2021"

[lib]
name = "aoc_2025"
path = "src/lib.rs"

[[bin]]
name = "day-01"

[[bin]]
name = "day-02"

[[bin]]
name = "day-03"

[[bin]]
name = "day-04"

[[bin]]
name = "day-05"

[[bin]]
name = "day-06"

[[bin]]
name = "day-07"

[[bin]]
name = "day-08"

[[bin]]
name = "day-09"

[[bin]]
name = "day-10"

[[bin]]
name = "day-11"
